--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,8 @@ jobs:
         uses: actions/checkout@v2.3.1
 
       - name: Super-Linter
-        uses: docker://github/super-linter:latest
+        #uses: docker://github/super-linter:latest
+        uses: GaboFDC/super-linter@gf_fix_testcase_change
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
