--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.1
+        with:
+          fetch-depth: 0
 
       - name: Super-Linter
         uses: docker://github/super-linter:latest
