--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,7 +23,7 @@ jobs:
       - name: test
         run: git log --oneline -n 20
       - name: Super-Linter
-        uses: github/super-linter@gf_debug_multi_status
+        uses: github/super-linter
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
