--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,7 +23,7 @@ jobs:
       - name: test
         run: git log --oneline -n 20
       - name: Super-Linter
-        uses: docker://github/super-linter:latest
+        uses: github/super-linter@gf_fix_diff_again
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
